# arxiv-data-explorer

./: .env.example  .gitattributes  .gitignore  .jcodemunch.jsonc  .rustfmt.toml  Cargo.toml  DESIGN.md  README.md  SESSION_HANDOFF.md  arXiv Ingestion  arXiv Ingestion.ipynb  arxiv_deep_explore.ipynb  arxiv_explore.ipynb  arxiv_random_sample.parquet  arxiv_random_sample_10k.parquet  clippy.toml  data_dictionary.yaml  deny.toml  main.py  opencode.json  package-lock.json  package.json  pyproject.toml  quick_sample.ipynb  rust-toolchain.toml  svelte.config.js  vite.config.ts  vitest.config.ts
.claude/: launch.json
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
.pi-subagents/artifacts/: 163ac79d_reviewer_0_input.md  163ac79d_reviewer_0_meta.json  163ac79d_reviewer_0_output.md  163ac79d_reviewer_0_transcript.jsonl  3635bbeb_worker_0_input.md  3635bbeb_worker_0_meta.json  3635bbeb_worker_0_transcript.jsonl  4241e510_worker_0_meta.json  4241e510_worker_0_transcript.jsonl  5e68d6f4_worker_0_input.md  5e68d6f4_worker_0_meta.json  5e68d6f4_worker_0_output.md  5e68d6f4_worker_0_transcript.jsonl  a2542e2f_reviewer_0_input.md  a2542e2f_reviewer_0_meta.json  a2542e2f_reviewer_0_transcript.jsonl  a2542e2f_reviewer_1_input.md  a2542e2f_reviewer_1_meta.json  a2542e2f_reviewer_1_transcript.jsonl  a2542e2f_reviewer_2_input.md  a2542e2f_reviewer_2_meta.json  a2542e2f_reviewer_2_transcript.jsonl  b77d9987_reviewer_0_input.md  b77d9987_reviewer_0_meta.json  b77d9987_reviewer_0_output.md  b77d9987_reviewer_0_transcript.jsonl  b77d9987_reviewer_1_input.md  b77d9987_reviewer_1_meta.json  b77d9987_reviewer_1_transcript.jsonl  b77d9987_reviewer_2_input.md  b77d9987_reviewer_2_meta.json  b77d9987_reviewer_2_output.md  b77d9987_reviewer_2_transcript.jsonl
arxiv_explorer/: app.py  data_loader.py  labels.py  network_app.py
crates/arxcheck/: Cargo.toml
crates/arxcheck/src/: lib.rs  wasm.rs
crates/arxcheck/src/checks/: api_contract.rs  edges.rs  graph.rs  mod.rs  shard.rs  xref.rs
crates/arxwasm/: Cargo.toml
functions/api/: arxiv.js
infra/: r2-cors.json
lib/bindings/: utils.js
scripts/: build_author_shards.mjs  build_data.py  build_trends.py  poisson_var.py  postbuild.mjs  requirements.txt  sync_data.sh  upload_r2.sh  utils.py
src/: app.css  app.html
src/lib/: types.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
static/: _headers
static/data/: author_rankings.json  category_dynamics.json  category_graph.json  category_hierarchy.json  category_stats.json  causal_edges.json  network_stats.json  papers.parquet  timeseries.json  topics.json
tests/: shared_mock.py  test_app.py  test_build_data.py  test_build_suggest_index.py  test_network.py
(+421 files in other folders)
