[project]
name = "bayesian-causal-learning"
version = "0.1.0"
description = "Interactive arXiv paper explorer with category networks, author collaboration graphs, and drill-down analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38",
    "polars>=1.20",
    "networkx>=3.4",
    "plotly>=6.7",
    "numpy>=2.4",
    "pandas>=2.2",
    "huggingface-hub>=1.17.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.11",
    "ipykernel>=7.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
