[project]
name = "arxiv-data-explorer"
version = "0.1.0"
description = "Interactive arXiv paper explorer with category networks, author collaboration graphs, and drill-down analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.20",
    "numpy>=2.4",
    "huggingface-hub>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.11",
    "ipykernel>=7.2",
]

[tool.ruff.format]
quote-style = "double"
