[project]
name = "arxiv-data-explorer"
version = "0.1.0"
description = "Interactive arXiv paper explorer with category networks, author collaboration graphs, and drill-down analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daft>=0.3.0,<1.0.0",
    "numpy>=2.4",
    "pandas>=2.2",
    "huggingface-hub>=1.17.0",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "faiss-cpu>=1.14.3",
    "scikit-learn>=1.9.0",
    "brotli>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "ruff>=0.11",
    "ipykernel>=7.2",
]

[tool.ruff.format]
quote-style = "double"
